crates/ty_python_semantic/resources/mdtest/snapshots/param_spec_errors.md_-_`ParamSpec`_error_lo…_(f21498c9a6c85519).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: param_spec_errors.md - `ParamSpec` error locations
mdtest path: crates/ty_python_semantic/resources/mdtest/param_spec_errors.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Callable
 2 | 
 3 | def fn1(a: int) -> None: ...
 4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
 5 | 
 6 | foo(fn1, a="a")  # error: [invalid-argument-type]
 7 | 
 8 | def fn2(a: int, b: str, c: float) -> None: ...
 9 | 
10 | # error: [invalid-argument-type]
11 | # error: [invalid-argument-type]
12 | # error: [invalid-argument-type]
13 | foo(fn2, a="a", b=2, c="c")
14 | 
15 | def fn3(a: int) -> None: ...
16 | 
17 | foo(fn3, a=1, unknown_param=2)  # error: [unknown-argument]
18 | foo(fn3, 1, 2, 3)  # error: [too-many-positional-arguments]
19 | 
20 | def fn4(a: int, /) -> None: ...
21 | 
22 | foo(fn4, a=1)  # error: [positional-only-parameter-as-kwarg]
23 | 
24 | def fn5(a: int, b: int) -> None: ...
25 | 
26 | # error: [parameter-already-assigned]
27 | # error: [missing-argument]
28 | foo(fn5, 1, a=2)
29 | 
30 | # error: [missing-argument]
31 | foo(fn5)
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:6:10
  |
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |          ^^^^^ Expected `int`, found `Literal["a"]`
7 |
8 | def fn2(a: int, b: str, c: float) -> None: ...
  |
info: Function defined here
 --> src/mdtest_snippet.py:4:5
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^         ------------------ Parameter declared here
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
  --> src/mdtest_snippet.py:13:10
   |
11 | # error: [invalid-argument-type]
12 | # error: [invalid-argument-type]
13 | foo(fn2, a="a", b=2, c="c")
   |          ^^^^^ Expected `int`, found `Literal["a"]`
14 |
15 | def fn3(a: int) -> None: ...
   |
info: Function defined here
 --> src/mdtest_snippet.py:4:5
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^         ------------------ Parameter declared here
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
  --> src/mdtest_snippet.py:13:17
   |
11 | # error: [invalid-argument-type]
12 | # error: [invalid-argument-type]
13 | foo(fn2, a="a", b=2, c="c")
   |                 ^^^ Expected `str`, found `Literal[2]`
14 |
15 | def fn3(a: int) -> None: ...
   |
info: Function defined here
 --> src/mdtest_snippet.py:4:5
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^                             ------------- Parameter declared here
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
  --> src/mdtest_snippet.py:13:22
   |
11 | # error: [invalid-argument-type]
12 | # error: [invalid-argument-type]
13 | foo(fn2, a="a", b=2, c="c")
   |                      ^^^^^ Expected `int | float`, found `Literal["c"]`
14 |
15 | def fn3(a: int) -> None: ...
   |
info: Function defined here
 --> src/mdtest_snippet.py:4:5
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^                                            ------------------ Parameter declared here
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[unknown-argument]: Argument `unknown_param` does not match any known parameter of function `foo`
  --> src/mdtest_snippet.py:17:15
   |
15 | def fn3(a: int) -> None: ...
16 |
17 | foo(fn3, a=1, unknown_param=2)  # error: [unknown-argument]
   |               ^^^^^^^^^^^^^^^
18 | foo(fn3, 1, 2, 3)  # error: [too-many-positional-arguments]
   |
info: Function signature here
 --> src/mdtest_snippet.py:4:5
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `unknown-argument` is enabled by default

```

```
error[too-many-positional-arguments]: Too many positional arguments to function `foo`: expected 1, got 3
  --> src/mdtest_snippet.py:18:13
   |
17 | foo(fn3, a=1, unknown_param=2)  # error: [unknown-argument]
18 | foo(fn3, 1, 2, 3)  # error: [too-many-positional-arguments]
   |             ^
19 |
20 | def fn4(a: int, /) -> None: ...
   |
info: Function signature here
 --> src/mdtest_snippet.py:4:5
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `too-many-positional-arguments` is enabled by default

```

```
error[positional-only-parameter-as-kwarg]: Positional-only parameter 1 (`a`) passed as keyword argument of function `foo`
  --> src/mdtest_snippet.py:22:10
   |
20 | def fn4(a: int, /) -> None: ...
21 |
22 | foo(fn4, a=1)  # error: [positional-only-parameter-as-kwarg]
   |          ^^^
23 |
24 | def fn5(a: int, b: int) -> None: ...
   |
info: Function signature here
 --> src/mdtest_snippet.py:4:5
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `positional-only-parameter-as-kwarg` is enabled by default

```

```
error[missing-argument]: No argument provided for required parameter `b` of function `foo`
  --> src/mdtest_snippet.py:28:1
   |
26 | # error: [parameter-already-assigned]
27 | # error: [missing-argument]
28 | foo(fn5, 1, a=2)
   | ^^^^^^^^^^^^^^^^
29 |
30 | # error: [missing-argument]
   |
info: Parameter declared here
 --> src/mdtest_snippet.py:4:37
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |                                     ^^^^^^^^^^^^^
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `missing-argument` is enabled by default

```

```
error[parameter-already-assigned]: Multiple values provided for parameter `a` of function `foo`
  --> src/mdtest_snippet.py:28:13
   |
26 | # error: [parameter-already-assigned]
27 | # error: [missing-argument]
28 | foo(fn5, 1, a=2)
   |             ^^^
29 |
30 | # error: [missing-argument]
   |
info: rule `parameter-already-assigned` is enabled by default

```

```
error[missing-argument]: No arguments provided for required parameters `a`, `b` of function `foo`
  --> src/mdtest_snippet.py:31:1
   |
30 | # error: [missing-argument]
31 | foo(fn5)
   | ^^^^^^^^
   |
info: Parameters declared here
 --> src/mdtest_snippet.py:4:16
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `missing-argument` is enabled by default

```
